move packages into their own files by family

--- a/setup.yml
+++ b/setup.yml
@@ -8,221 +8,19 @@
         msg: "{{ ansible_facts }}"
       tags: [ never, debug ]
 
+    ### --- System ---
     - name: Repositories
       tags: [ system, dev, repo ]
       become: true
       import_tasks: tasks/system/repositories.yml
 
-    - name: Debian - Install common packages
+    - name: Packages
+      tags: [ system, dev, packages ]
       become: true
-      apt:
-        name: &common_packages
-          - crudini
-          - docker-ce
-          - flatpak
-          - htop
-          - python3-dbus
-          - seahorse # key management
-          - sqlitebrowser
-          - sublime-merge
-          - sublime-text
-          - sysstat # iostat
-          - zsh
-        state: present
-        update_cache: yes
-      when: ansible_os_family == 'Debian'
-      tags: [ dev, docker ]
+      import_tasks: tasks/system/packages.yml
 
-    - name: RedHat - Install common packages
-      become: true
-      dnf:
-        name: *common_packages
-        state: present
-      when: ansible_os_family == 'RedHat'
-      tags: [ dev ]
-
-    - name: Debian - Install packages
-      become: true
-      apt:
-        pkg:
-          - containerd.io
-          - docker-ce-cli
-          - libcairo2-dev
-          - libglib2.0-bin # gsettings
-          - pkg-config
-        state: present
-      when: ansible_os_family == 'Debian'
-      tags: [ dev ]
-
-    - name: Ubuntu 18+ - Install packages
-      become: true
-      apt:
-        pkg:
-          - flameshot
-        state: present
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version|int >= 18
-      tags: [ dev ]
-
-    # Need to upgrade vim-minimal first, otherwise there are conflicts
-    - name: RedHat - Update vim-minimal
-      become: true
-      dnf:
-        name:
-          - vim-minimal
-        state: latest
-      when: ansible_os_family == 'RedHat'
-      tags: [ dev ]
-
-    # Install vim separately due to conflicts in upgrade / install
-    - name: RedHat - Update vim
-      become: true
-      dnf:
-        name:
-          - vim
-        state: latest
-      when: ansible_os_family == 'RedHat'
-      tags: [ dev ]
-
-    - name: RedHat - Install packages
-      become: true
-      dnf:
-        name:
-          - autoconf
-          - autojump-zsh
-          - automake
-          - bison
-          - bzip2
-          - bzip2-devel
-          - curl
-          - dkms
-          - dnf-automatic
-          - fuse-sshfs
-          - gcc
-          - gcc-c++
-          - git
-          - gitk
-          - google-cloud-sdk
-          - graphviz
-          - gtk-murrine-engine
-          - ImageMagick
-          - jq
-          - julia
-          - keybase
-          - kubectl
-          - libcurl-devel
-          - libffi-devel
-          - libnotify
-          - libtool
-          - libyaml-devel
-          - levien-inconsolata-fonts
-          - make
-          - mozilla-fira-mono-fonts
-          - mozilla-fira-sans-fonts
-          - mozilla-fira-fonts-common
-          - ncdu
-          - nodejs
-          - npm
-          - openssl-devel
-          - p7zip
-          - patch
-          - pcp-system-tools # dstat
-          - perl
-          - pssh
-          - pv
-          - readline-devel
-          - redhat-lsb
-          - redhat-rpm-config
-          - samba-client
-          - ShellCheck
-          - slack
-          - sqlite-devel
-          - tree
-          - virt-what
-          - vlc
-          - wget
-          - xz
-          - xz-devel
-          - zlib-devel
-        state: present
-      when: ansible_os_family == 'RedHat'
-      tags: [ dev ]
-
-    - name: Fedora 26+ - Install packages
-      become: true
-      dnf:
-        name:
-          - flameshot
-          - fzf
-        state: present
-      when: ansible_distribution == 'Fedora' and ansible_distribution_major_version|int >= 26
-      tags: [ dev ]
-
-    - name: Fedora 27+ - Install packages
-      become: true
-      dnf:
-        name:
-          - containerd.io
-          - docker-ce-cli
-          - podman
-        state: present
-      when: ansible_distribution == 'Fedora' and ansible_distribution_major_version|int >= 27
-      tags: [ dev ]
-
-    - name: Fedora <= 27 - Install mysql-community-devel
-      become: true
-      dnf:
-        name:
-          - mysql-community-devel # from the community repository
-        state: present
-      when: ansible_distribution == 'Fedora' and ansible_distribution_major_version|int <= 27
-      tags: [ dev ]
-
-    - name: Fedora 28+ - Install packages
-      become: true
-      dnf:
-        name:
-          - code
-          - community-mysql-devel # from fedora modular
-        state: present
-      when: ansible_distribution == 'Fedora' and ansible_distribution_major_version|int >= 28
-      tags: [ dev ]
-
-    - name: Fedora 29+ - Install packages
-      become: true
-      dnf:
-        name:
-          - bat
-          - pulseaudio-module-bluetooth-freeworld
-        state: present
-      when: ansible_distribution == 'Fedora' and ansible_distribution_major_version|int >= 29
-      tags: [ dev ]
-
-    - name: Fedora 30+ - Install packages
-      become: true
-      dnf:
-        name:
-          - lazygit
-          - openrazer-meta
-          - polychromatic  # razer device configuration
-        state: present
-      when: ansible_distribution == 'Fedora' and ansible_distribution_major_version|int >= 30
-      tags: [ dev ]
-
-    - name: RedHat - Kernel Devel
-      become: true
-      dnf:
-        # Disable updates so on fresh installs this will get the headers matching the current version
-        disablerepo: updates
-        name:
-          - kernel-headers
-          - kernel-devel
-        state: present
-      when: ansible_os_family == 'RedHat'
-      tags: [ dev ]
-
-    ### --- System ---
     - name: Containers
-      tags: [ system, containers, dev ]
+      tags: [ system, dev, containers]
       become: true
       import_tasks: tasks/system/containers.yml
 
