fix lint warnings on invalid paths

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -12,5 +12,5 @@
 ### --- Distro specific ---
 
 - name: Ubuntu Packages
-  import_tasks: tasks/system/debian/ubuntu/packages.yml
+  import_tasks: ubuntu/packages.yml
   when: ansible_distribution == 'Ubuntu'
