--- a/tasks/system/repositories.yml
+++ b/tasks/system/repositories.yml
@@ -1,8 +1,8 @@
 ---
 - name: Debian Repositories
-  import_tasks: tasks/system/debian/repositories.yml
+  import_tasks: debian/repositories.yml
   when: ansible_os_family == 'Debian'
 
 - name: RedHat Repositories
-  import_tasks: tasks/system/redhat/repositories.yml
+  import_tasks: redhat/repositories.yml
   when: ansible_os_family == 'RedHat'
