--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -1,5 +1,5 @@
 ---
-- name: Fedora 26+ - Install packages
+- name: Fedora >=26 - Install packages
   dnf:
     name:
       - flameshot
@@ -7,7 +7,7 @@
     state: present
   when: ansible_distribution_major_version|int >= 26
 
-- name: Fedora 27+ - Install packages
+- name: Fedora >=27 - Install packages
   dnf:
     name:
       - containerd.io
@@ -16,14 +16,14 @@
     state: present
   when: ansible_distribution_major_version|int >= 27
 
-- name: Fedora <= 27 - Install mysql-community-devel
+- name: Fedora <=27 - Install mysql-community-devel
   dnf:
     name:
       - mysql-community-devel # from the community repository
     state: present
   when: ansible_distribution_major_version|int <= 27
 
-- name: Fedora 28+ - Install packages
+- name: Fedora >=28 - Install packages
   dnf:
     name:
       - code
@@ -31,7 +31,7 @@
     state: present
   when: ansible_distribution_major_version|int >= 28
 
-- name: Fedora 29+ - Install packages
+- name: Fedora >=29 - Install packages
   dnf:
     name:
       - bat
@@ -39,7 +39,7 @@
     state: present
   when: ansible_distribution_major_version|int >= 29
 
-- name: Fedora 30+ - Install packages
+- name: Fedora >=30 - Install packages
   dnf:
     name:
       - lazygit
