--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -1,5 +1,12 @@
 ---
-- name: Fedora <= 25 - Add MySQL community repository
+- name: Fedora - Add RPMFusion repository
+  dnf:
+    name:
+      - https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
+      - https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
+    state: present
+
+- name: Fedora <=25 - Add MySQL community repository
   dnf:
     name:
       - "https://dev.mysql.com/get/mysql57-community-release-fc{{ ansible_distribution_major_version|int }}-10.noarch.rpm"
@@ -15,21 +22,13 @@
     - ansible_distribution_major_version|int >= 26
     - ansible_distribution_major_version|int <= 27
 
-- name: Fedora - Add RPMFusion repository
-  dnf:
-    name:
-      - https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
-      - https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
-    state: present
-  when: ansible_distribution == 'Fedora'
-
-- name: Fedora 30+ - Add lazygit repository
+- name: Fedora >=30 - Add lazygit repository
   command:
     cmd: dnf copr enable atim/lazygit -y
     creates: /etc/yum.repos.d/_copr:copr.fedorainfracloud.org:atim:lazygit.repo
   when: ansible_distribution_major_version|int >= 30
 
-- name: Fedora 30+ - Add Razer repository
+- name: Fedora >=30 - Add Razer repository
   yum_repository:
     file: razer
     name: razer
