--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -47,3 +47,11 @@
       - polychromatic  # razer device configuration
     state: present
   when: ansible_distribution_major_version|int >= 30
+
+# This is for the razer drivers which run in userspace
+- name: Fedora >=30 - Add user to plugdev group
+  user:
+    name: '{{ ansible_user }}'
+    groups: plugdev
+    append: true
+  when: ansible_distribution_major_version|int >= 30
