--- a/tasks/system/redhat/packages.yml
+++ b/tasks/system/redhat/packages.yml
@@ -24,64 +24,65 @@
 
 - name: RedHat - Install packages
   dnf:
-    name:
-      - autoconf
-      - autojump-zsh
-      - automake
-      - bison
-      - bzip2
-      - bzip2-devel
-      - curl
-      - dkms
-      - dnf-automatic
-      - fuse-sshfs
-      - gcc
-      - gcc-c++
-      - git
-      - gitk
-      - google-cloud-sdk
-      - graphviz
-      - gtk-murrine-engine
-      - ImageMagick
-      - jq
-      - julia
-      - keybase
-      - kubectl
-      - libcurl-devel
-      - libffi-devel
-      - libnotify
-      - libtool
-      - libyaml-devel
-      - levien-inconsolata-fonts
-      - make
-      - mozilla-fira-mono-fonts
-      - mozilla-fira-sans-fonts
-      - mozilla-fira-fonts-common
-      - ncdu
-      - nodejs
-      - npm
-      - openssl-devel
-      - p7zip
-      - patch
-      - pcp-system-tools # dstat
-      - perl
-      - pssh
-      - pv
-      - readline-devel
-      - redhat-lsb
-      - redhat-rpm-config
-      - samba-client
-      - ShellCheck
-      - slack
-      - sqlite-devel
-      - tree
-      - virt-what
-      - vlc
-      - wget
-      - xz
-      - xz-devel
-      - zlib-devel
+    name: "{{ item }}"
     state: present
+  loop:
+    - autoconf
+    - autojump-zsh
+    - automake
+    - bison
+    - bzip2
+    - bzip2-devel
+    - curl
+    - dkms
+    - dnf-automatic
+    - fuse-sshfs
+    - gcc
+    - gcc-c++
+    - git
+    - gitk
+    - google-cloud-sdk
+    - graphviz
+    - gtk-murrine-engine
+    - ImageMagick
+    - jq
+    - julia
+    - keybase
+    - kubectl
+    - libcurl-devel
+    - libffi-devel
+    - libnotify
+    - libtool
+    - libyaml-devel
+    - levien-inconsolata-fonts
+    - make
+    - mozilla-fira-mono-fonts
+    - mozilla-fira-sans-fonts
+    - mozilla-fira-fonts-common
+    - ncdu
+    - nodejs
+    - npm
+    - openssl-devel
+    - p7zip
+    - patch
+    - pcp-system-tools # dstat
+    - perl
+    - pssh
+    - pv
+    - readline-devel
+    - redhat-lsb
+    - redhat-rpm-config
+    - samba-client
+    - ShellCheck
+    - slack
+    - sqlite-devel
+    - tree
+    - virt-what
+    - vlc
+    - wget
+    - xz
+    - xz-devel
+    - zlib-devel
 
 ### --- Distro specific ---
 
