--- a/tasks/system/redhat/packages.yml
+++ b/tasks/system/redhat/packages.yml
@@ -84,6 +84,13 @@
     - xz-devel
     - zlib-devel
 
+- name: RedHat - Install remote packages
+  dnf:
+    name: "{{ item }}"
+    state: present
+  loop:
+    - https://github.com/wagoodman/dive/releases/download/v{{ dive_version }}/dive_{{ dive_version }}_linux_amd64.rpm
+
 ### --- Distro specific ---
 
 - name: Fedora Packages
