--- a/tasks/user/ides.yml
+++ b/tasks/user/ides.yml
@@ -23,3 +23,20 @@
     url: https://packagecontrol.io/Package%20Control.sublime-package
     dest: ~/.config/sublime-text-3/Installed Packages/Package Control.sublime-package
   when: not sublime_package_control.stat.exists
+
+- name: All - VSCode installed extensions
+  tags: [ user, ide ]
+  command: code --list-extensions
+  register: vscode_extensions
+
+- name: All - VSCode install extensions
+  tags: [ user, ide ]
+  command: code --install-extension {{ item }}
+  when: "item not in vscode_extensions['stdout_lines'] | map('lower')"
+  loop:
+    - bungcip.better-toml
+    - eamodio.gitlens
+    - editorconfig.editorconfig
+    - hashicorp.terraform
+    - ms-azuretools.vscode-docker
+    - ms-python.python
