--- a/tasks/user/python.yml
+++ b/tasks/user/python.yml
@@ -15,16 +15,17 @@
     extra_args: --user
     name:
       - ansible-lint<5.0.0,>=4.2.0
-      - awscli<2.0.0,>=1.18.21
       - aws-credentials
+      - awscli<2.0.0,>=1.18.21
       - boto3<2.0.0,>=1.12.21
       - diagrams
       - dlint
-      - flake8<4.0.0,>=3.7.9
       - flake8-annotations
       - flake8-docstrings
       - flake8-import-order
+      - flake8<4.0.0,>=3.7.9
       - importlib-metadata<1.2.0,>=1.1.3
+      - importlib-resources<2.0.0,>=1.0.0
       - ipdb
       - ipython<8.0.0,>=7.0.0
       - jedi
