--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -2,6 +2,7 @@
 - name: Debian - Install packages
   apt:
     pkg:
+      - code
       - containerd.io
       - docker-ce-cli
       - libcairo2-dev
