--- a/tasks/system/debian/repositories.yml
+++ b/tasks/system/debian/repositories.yml
@@ -1,4 +1,18 @@
 ---
+- name: Debian - Add VSCode signing key
+  shell:
+    cmd: |
+      curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > /tmp/packages.microsoft.gpg
+      install -o root -g root -m 644 /tmp/packages.microsoft.gpg /usr/share/keyrings/
+      rm /tmp/packages.microsoft.gpg
+    creates: /usr/share/keyrings/packages.microsoft.gpg
+
+- name: Debian - Add VSCode Repo
+  apt_repository:
+    repo: "deb [arch=amd64 signed-by=/usr/share/keyrings/packages.microsoft.gpg] https://packages.microsoft.com/repos/vscode stable main"
+    filename: vscode
+    state: present
+
 - name: Debian - Add Docker signing key
   tags: [ docker ]
   apt_key:
