--- a/tasks/system/debian/ubuntu/packages.yml
+++ b/tasks/system/debian/ubuntu/packages.yml
@@ -5,3 +5,10 @@
       - flameshot
     state: present
   when: ansible_distribution_major_version|int >= 18
+
+- name: Ubuntu >=20 - Install packages
+  apt:
+    pkg:
+      - python-cairo
+    state: present
+  when: ansible_distribution_major_version|int >= 20
