--- a/tasks/system/debian/ubuntu/packages.yml
+++ b/tasks/system/debian/ubuntu/packages.yml
@@ -10,5 +10,6 @@
   apt:
     pkg:
       - python3-cairo
+      - python3-launchpadlib
     state: present
   when: ansible_distribution_major_version|int >= 20
