--- a/tasks/system/debian/ubuntu/packages.yml
+++ b/tasks/system/debian/ubuntu/packages.yml
@@ -11,5 +11,6 @@
     pkg:
       - python3-cairo
       - python3-launchpadlib
+      - python3-testresources
     state: present
   when: ansible_distribution_major_version|int >= 20
