arch: added vscode

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -2,6 +2,7 @@
   - name: Archlinux - Install packages
     pacman:
       name:
+        - code
         - docker
         - flatpak
         - gcc
