arch: added keybase

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -8,6 +8,8 @@
         - flatpak
         - gcc
         - jq
+        - keybase
+        - keybase-gui
         - make
         - tk # windowing toolkit needed for gitk
       state: present
