arch: added nodejs, npm

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -11,5 +11,7 @@
         - keybase
         - keybase-gui
         - make
+        - nodejs
+        - npm
         - tk # windowing toolkit needed for gitk
       state: present
