arch: added missing node dependency

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -10,6 +10,7 @@
         - jq
         - keybase
         - keybase-gui
+        - libnghttp2 # node dependency
         - make
         - nodejs
         - npm
