arch: sync and upgrade required packages when installing

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -10,9 +10,10 @@
         - jq
         - keybase
         - keybase-gui
-        - libnghttp2 # node dependency
         - make
         - nodejs
         - npm
         - tk # windowing toolkit needed for gitk
       state: present
+      update_cache: yes
+      upgrade: yes
