arch: update before install

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,8 @@
     - echo "$HOME"
     - pwd
     - ls -laH
-    - pacman -Sy --noconfirm sudo
+    - pacman -Syu --noconfirm
+    - pacman -S --noconfirm sudo
     - "echo '%wheel  ALL=(ALL) NOPASSWD: ALL' > /etc/sudoers.d/ci"
     - useradd --user-group --create-home --groups=wheel --shell=/bin/bash public
     - cat /etc/passwd
