fedora: added intel-media-driver for better iGPU support

--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -35,6 +35,7 @@
   dnf:
     name:
       - bat
+      - intel-media-driver
       - pulseaudio-module-bluetooth-freeworld
       - texlive-montserrat
     state: present
