redhat: add support for centos

--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -6,6 +6,8 @@
   loop:
     - autojump-zsh
     - docker-ce
+    - fd-find
+    - gdouros-symbola-fonts
     - gtk-murrine-engine # gtk2 theme engine. Probably safe to remove
     - julia
     - levien-inconsolata-fonts
