--- a/tasks/system/redhat/packages.yml
+++ b/tasks/system/redhat/packages.yml
@@ -40,13 +40,11 @@
     - dconf
     - dkms
     - dnf-automatic
-    - fd-find
     - flatpak
     - fuse-sshfs
     - gcc
     - gcc-c++
     - gdb
-    - gdouros-symbola-fonts
     - git
     - gitk
     - google-cloud-sdk
@@ -107,6 +105,10 @@
     - https://github.com/wagoodman/dive/releases/download/v{{ dive_version }}/dive_{{ dive_version }}_linux_amd64.rpm
 
 ### --- Distro specific ---
+
+- name: CentOS Packages
+  import_tasks: centos/packages.yml
+  when: ansible_distribution == 'CentOS'
 
 - name: Fedora Packages
   import_tasks: fedora/packages.yml
