--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,6 +126,14 @@ archlinux:
     - .rules_archlinux
   image: archlinux/base:latest
 
+centos_8:
+  # EOL: 2029-05-31
+  extends:
+    - .build
+    - .setup_fedora
+    - .rules_redhat
+  image: centos:8
+
 fedora_28:
   # EOL: 2019-05-28
   extends:
