--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -1,4 +1,21 @@
 ---
+- name: Fedora - Install packages
+  dnf:
+    name: "{{ item }}"
+    state: present
+  loop:
+    - autojump-zsh
+    - docker-ce
+    - gtk-murrine-engine # gtk2 theme engine. Probably safe to remove
+    - julia
+    - levien-inconsolata-fonts
+    - mozilla-fira-fonts-common
+    - mozilla-fira-mono-fonts
+    - mozilla-fira-sans-fonts
+    - pssh
+    - ShellCheck
+    - sqlitebrowser
+
 - name: Fedora >=26 - Install packages
   dnf:
     name:
