--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,18 +78,17 @@
 # https://github.com/yaml/yaml/issues/48
 .rules_archlinux:
   rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     ### All
-    - if: $CI_COMMIT_BRANCH == 'main'
-    - if: $CI_MERGE_REQUEST_ID
     - changes:
-        - .gitlab-ci.yml
-        - "**/*.sh"
-        - setup.yml
-        - ansible.cfg
-        - bin/*
-        - files/**/*
-        - tasks/system/*.yml
-        - tasks/user/*.yml
+      - .gitlab-ci.yml
+      - "**/*.sh"
+      - setup.yml
+      - ansible.cfg
+      - bin/*
+      - files/**/*
+      - tasks/system/*.yml
+      - tasks/user/*.yml
     ### specific
     - changes:
       - bootstrap/(arch|manjaro).sh
@@ -98,18 +97,17 @@
 
 .rules_debian: &rules_debian
   rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     ### All
-    - if: $CI_COMMIT_BRANCH == 'main'
-    - if: $CI_MERGE_REQUEST_ID
     - changes:
-        - .gitlab-ci.yml
-        - "**/*.sh"
-        - setup.yml
-        - ansible.cfg
-        - bin/*
-        - files/**/*
-        - tasks/system/*.yml
-        - tasks/user/*.yml
+      - .gitlab-ci.yml
+      - "**/*.sh"
+      - setup.yml
+      - ansible.cfg
+      - bin/*
+      - files/**/*
+      - tasks/system/*.yml
+      - tasks/user/*.yml
     ### specific
     - changes:
       - bootstrap/(ubuntu).sh
@@ -118,23 +116,30 @@
 
 .rules_redhat: &rules_redhat
   rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     ### All
-    - if: $CI_COMMIT_BRANCH == 'main'
-    - if: $CI_MERGE_REQUEST_ID
     - changes:
-        - .gitlab-ci.yml
-        - "**/*.sh"
-        - setup.yml
-        - ansible.cfg
-        - bin/*
-        - files/**/*
-        - tasks/system/*.yml
-        - tasks/user/*.yml
+      - .gitlab-ci.yml
+      - "**/*.sh"
+      - setup.yml
+      - ansible.cfg
+      - bin/*
+      - files/**/*
+      - tasks/system/*.yml
+      - tasks/user/*.yml
     ### specific
     - changes:
       - bootstrap/(fedora).sh
       - tasks/system/redhat/**/*
       - tasks/user/redhat/**/*
+
+# Defined when pipelines are created
+workflow:
+  rules:
+    - if: $CI_MERGE_REQUEST_IID
+    - if: $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_COMMIT_REF_NAME =~ /^ci-.*$/
 
 lint:
   interruptible: true
@@ -239,4 +244,4 @@ deploy_github:
     name: github
   resource_group: github
   rules:
-    - if: $CI_COMMIT_BRANCH == 'main'
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
