--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,21 +74,25 @@
     - cat /etc/passwd
     - cat /etc/group
 
+.rules_common_files: &rules_common_files
+  - .gitlab-ci.yml
+  - "**/*.sh"
+  - setup.yml
+  - ansible.cfg
+  - bin/*
+  - files/**/*
+  - tasks/system/*.yml
+  - tasks/user/*.yml
+
 # Someday sequences will be mergable
 # https://github.com/yaml/yaml/issues/48
 .rules_archlinux:
   rules:
+    - if: $CI_COMMIT_TAG
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_MERGE_REQUEST_IID
     ### All
-    - changes:
-      - .gitlab-ci.yml
-      - "**/*.sh"
-      - setup.yml
-      - ansible.cfg
-      - bin/*
-      - files/**/*
-      - tasks/system/*.yml
-      - tasks/user/*.yml
+    - changes: *rules_common_files
     ### specific
     - changes:
       - bootstrap/(arch|manjaro).sh
@@ -97,17 +101,11 @@
 
 .rules_debian: &rules_debian
   rules:
+    - if: $CI_COMMIT_TAG
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_MERGE_REQUEST_IID
     ### All
-    - changes:
-      - .gitlab-ci.yml
-      - "**/*.sh"
-      - setup.yml
-      - ansible.cfg
-      - bin/*
-      - files/**/*
-      - tasks/system/*.yml
-      - tasks/user/*.yml
+    - changes: *rules_common_files
     ### specific
     - changes:
       - bootstrap/(ubuntu).sh
@@ -116,30 +114,16 @@
 
 .rules_redhat: &rules_redhat
   rules:
+    - if: $CI_COMMIT_TAG
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: $CI_MERGE_REQUEST_IID
     ### All
-    - changes:
-      - .gitlab-ci.yml
-      - "**/*.sh"
-      - setup.yml
-      - ansible.cfg
-      - bin/*
-      - files/**/*
-      - tasks/system/*.yml
-      - tasks/user/*.yml
+    - changes: *rules_common_files
     ### specific
     - changes:
       - bootstrap/(fedora).sh
       - tasks/system/redhat/**/*
       - tasks/user/redhat/**/*
-
-# Defined when pipelines are created
-workflow:
-  rules:
-    - if: $CI_MERGE_REQUEST_IID
-    - if: $CI_COMMIT_TAG
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-    - if: $CI_COMMIT_REF_NAME =~ /^ci-.*$/
 
 lint:
   interruptible: true
