--- a/tasks/system/redhat/packages.yml
+++ b/tasks/system/redhat/packages.yml
@@ -34,6 +34,9 @@
     - bzip2-devel
     - crudini
     - curl
+    - dbus-daemon
+    - dbus-tools
+    - dconf
     - dkms
     - dnf-automatic
     - flatpak
