redhat: move dbus tools to fedora >= 29

--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -52,6 +52,8 @@
   dnf:
     name:
       - bat
+      - dbus-daemon
+      - dbus-tools
       - intel-media-driver
       - pulseaudio-module-bluetooth-freeworld
       - texlive-montserrat
