--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -39,3 +39,13 @@
     gpgkey: "https://download.opensuse.org/repositories/hardware:/razer/Fedora_{{ ansible_distribution_major_version|int }}/repodata/repomd.xml.key"
     repo_gpgcheck: yes
   when: ansible_distribution_major_version|int >= 30
+
+# TODO: remove this once a F32 repo is available
+- name: Fedora 32 - Add Docker repository for Fedora 31
+  tags: [ docker ]
+  yum_repository:
+    file: docker-ce
+    name: docker-ce-stable
+    description: "Docker CE Stable - {{ ansible_distribution }} - 31 - $basearch"
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/31/$basearch/stable"
+  when: ansible_distribution_major_version|int == 32
