--- a/tasks/system/redhat/repositories.yml
+++ b/tasks/system/redhat/repositories.yml
@@ -9,7 +9,7 @@
   yum_repository:
     file: docker-ce
     name: docker-ce-stable
-    description: "Docker CE Stable - $basearch"
+    description: "Docker CE Stable - {{ ansible_distribution }} - $releasever - $basearch"
     baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/$releasever/$basearch/stable"
     enabled: yes
     gpgcheck: yes
