all: added bash-completion

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -8,6 +8,8 @@
     pkg: "{{ item }}"
     state: present
   loop:
+    - bash
+    - bash-completion
     - code
     - containerd.io
     - crudini
